--- a/Service/src/main/resources/application.properties
+++ b/Service/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# JWT
+jwt.secret=secret
+jwt.expiration=86400000
